--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@ overflow-x: hidden;
   padding: 42px;
  
   border-radius: 20px;
-  height: 500px;
+  height: 60%;
   background-color: #f5ede7;
   width: 400px;
   margin: 10px;
